--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="150dp" />
 
+        <com.sss.view.RotatingCircleView
+            android:id="@+id/rotatingCircle"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
