--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,13 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="150dp" />
+
+
+        <com.sss.view.AiVoiceView
+            android:id="@+id/aiVoice"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
