--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -22,15 +23,20 @@
             android:layout_width="match_parent"
             android:layout_height="150dp" />
 
-        <com.sss.view.RotatingCircleView
-            android:id="@+id/rotatingCircle"
+        <com.sss.view.GridPointView
+            android:id="@+id/gridPointView"
+            android:layout_marginTop="10dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp" />
+
+        <com.sss.view.AiVoiceView
+            android:id="@+id/aiVoice"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="150dp" />
 
-
-        <com.sss.view.AiVoiceView
-            android:id="@+id/aiVoice"
+        <com.sss.view.RotatingCircleView
+            android:id="@+id/rotatingCircle"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="150dp" />
