新增速度表

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,17 +23,25 @@
             android:layout_width="match_parent"
             android:layout_height="150dp" />
 
+        <com.sss.view.AiVoiceView
+            android:id="@+id/aiVoice"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
+        <com.sss.view.SpeedometerView
+            android:id="@+id/speedometerView"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
         <com.sss.view.GridPointView
             android:id="@+id/gridPointView"
             android:layout_marginTop="10dp"
             android:layout_width="250dp"
             android:layout_height="250dp" />
 
-        <com.sss.view.AiVoiceView
-            android:id="@+id/aiVoice"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="150dp" />
+
 
         <com.sss.view.RotatingCircleView
             android:id="@+id/rotatingCircle"
