--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <com.sss.view.HexagramView
+            android:layout_marginTop="10dp"
+            android:id="@+id/hexagramView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
         <com.sss.view.ColumnarView
             android:id="@+id/columnar"
             android:layout_width="match_parent"
