--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,10 @@
         android:orientation="horizontal">
 
         <TextView
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="声波"
+            android:text="顺序算法\n（能量高点在左侧）"
             android:textColor="@color/colorAccent" />
 
         <Switch
@@ -29,9 +30,10 @@
             android:textColor="@color/colorAccent" />
 
         <TextView
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="傅里叶"
+            android:text="镜像算法\n（能量高点在中间）"
             android:textColor="@color/colorAccent" />
 
     </LinearLayout>
@@ -46,6 +48,22 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/switch_diffusion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="扩散环"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/switch_ring"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="附件环"
+                android:textColor="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/switch_flower"
