--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,14 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/switch_wave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="上帝之环"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
                 android:id="@+id/switch_diffusion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
